<resources>
    <!--Common -->
    <string name="current_location">Current location</string>

    <!--Splash screen-->
    <string name="filter_title_track">WAY</string>
    <string name="image_description">image</string>
    <string name="splash_name_application">WHERE ARE YOU</string>
    <string name="splash_description_app">We need your location permission to capture your location, activity through the day and to let you share your live location with your friends when you are on the way.</string>
    <string name="splash_button_enable_location">Enable location</string>
    <string name="splash_toast_turn_on_wifi">Please turn on your internet</string>
    <!--Map screen-->
    <string name="toast_text_google_map_null">Google map is null</string>
    <string name="dialog_message_enable_gps">App need GPS.Do you want enable your GPS?</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="marker_title">Current location</string>
    <string name="toast_text_location_null">Not update current location!</string>
    <!--bottom button card-->
    <string name="bottom_button_card_title_text">Your friend is 23 min away!</string>
    <string name="bottom_button_card_description_text">Share your location back so that they can see you on the map.</string>
    <string name="bottom_button_card_link_text">https://www.trck.at/MGSLWx</string>
    <string name="bottom_button_card_text_copy_link">Copy Link</string>
    <!--Share Screen-->
    <string name="share_textview_text_going_somewhere">Going somewhere?</string>
    <string name="share_textview_text_description">Add a destination</string>
    <string name="share_textview_text_look_good">Look good?</string>
    <string name="share_textview_text_start_sharing">Start Sharing</string>
    <string name="share_textview_text_share_link">Share Link</string>
    <string name="share_textview_text_test_title">You\'re 1 min away</string>
    <string name="share_textview_text_text_test_description_success">Share your live location link:</string>
    <string name="share_textview_text_copied">Copied</string>
    <string name="share_textview_text_dialog_title">STOP</string>
    <string name="share_textview_text_dialog_message">Are your sure?</string>

    <!--Confirm location screen-->
    <string name="confirm_move_map">Move map to adjust marker</string>
    <string name="confirm_location">Confirm Location</string>

    <!--Custom floating menu-->
    <string name="custom_floating_menu_search_title">Search</string>
    <string name="custom_floating_menu_calendar_title">Calendar</string>
    <string name="custom_floating_menu_profile_title">Profile</string>
    <string name="custom_floating_menu_share_title">Share</string>
    <string name="custom_floating_menu_group_title">Group</string>

    <!--Register screen-->
    <string name="register_description">Add your photo, name and phone so that your friends can see you on a map,and call you when you are on the way</string>
    <string name="register_select_image">Select or take a new picture</string>
    <string name="register_toast_image_size">Please choose image with size less than...</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_phone">Phone Number</string>
    <string name="register_button_save_text">Register Profile</string>
    <string name="register_plus">+</string>
    <string name="register_user_name_default">User</string>
    <string name="register_iso_code_default">VN</string>
    <string name="register_skip">Skip</string>
    <string name="register_cancel">Cancel</string>
    <string name="register_create_user">Create user completed</string>
    <string name="register_update_user">Update user completed</string>
    <string name="register_double_click_to_exit">Please click BACK again to exit</string>
    <string name="register_request_permission">Please turn on Internet and GPS</string>
    <string name="register_tel">+84</string>
    <string name="register_update">Update</string>
    <!--Home screen-->
    <string name="toolbar_title">Home</string>
    <string name="not_update_current_location">\"Do not update the current location!\"</string>

    <!--Arrived screen-->
    <string name="arrived_show_summary">SHOW SUMMARY</string>
    <string name="arrived_done">DONE</string>
    <string name="arrived_average_speed">Average Speed</string>
    <string name="arrived_traveled">Traveled</string>
    <string name="arrived_elapsed">Elapsed</string>
    <string name="arrived_completed">completed</string>
    <string name="arrived_you">You</string>
    <string name="arrived_trip_summary">Trip Summary</string>
    <string name="arrived_you_arrived">you\'ve arrived</string>
    <string name="show_hour"> h </string>
    <string name="show_minutes"> min </string>
    <string name="show_distance"> km </string>
    <string name="show_average_speed"> kmph </string>
    <string name="arrived_dialog_tag">Dialog Fragment</string>
    <!-- SeaTrackingInfomationtion Screen-->
    <string name="search_location_enter_a_place">Enter a place</string>
    <string name="search_location_your_location">Your Location</string>
    <string name="search_location_choose_on_map">Choose on map</string>
    <string name="dialog_message_fill_in">Please fill in all fields</string>
    <string name="processing">Processing.</string>
    <string name="get_detail_error">Error! Please try it again.</string>
    <string name="dialog_title_error">Error</string>
    <string name="bottom_button_card_view_text_start_share">Start Sharing</string>
    <string name="register_update_profile">Update Profile</string>
    <string name="register_message_dialog">Do you want create user with user name is User ?</string>
    <string name="register_title_dialog">Information</string>
    <string name="register_title_error_dialog">Error</string>

    <!--In-ProgressLocation-->
    <string name="share">SHARE</string>
    <string name="stop">STOP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaving">You are leaving now</string>
    <string name="elapse">Elapsed</string>
    <string name="mask">--</string>
    <string name="travelled">Travelled</string>
    <string name="speed">Speed</string>
    <string name="eta">ETA %1$s</string>
    <string name="open_parentheses">( %1$s away)</string>
    <!-- Group Screen -->
    <string name="not_yet_join_to_group">You haven\'t joined to any group yet.</string>
    <string name="create_new_group">Create new Group</string>
    <string name="back">Back</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create</string>
    <string name="error_message">Error! Please try it again.</string>
    <string name="touch_to_reload">Touch button below to reload.</string>
    <string name="members_count">Members count: %d</string>
    <string name="create_at">Create at: %s</string>
    <string name="members_list">Member list:</string>
    <string name="can_not_get_members_list">Can\'t get member list.</string>
    <string name="view_invites">View invites</string>
    <string name="confirm">Confirm action</string>
    <string name="confirm_message_leave_group">Are you sure leave this group?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="leave_group_notification">You have left %s.</string>
    <string name="call_intent">tel:+84%s</string>
    <string name="coming_soon">Coming soon</string>
    <string name="invite_list">Invite List</string>
    <string name="join">join</string>
    <string name="group_screen_invite_request">Invite requests</string>
    <string name="group_name_empty">Group name must not empty</string>
    <string name="progress_dialog_title">processing...</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="notify_success">success</string>
    <string name="progress_dialog_message">Please wait a minute</string>
    <string name="empty_string" />
    <string name="confirm_message_change_owner">Do you want to take this person is admin?</string>
    <string name="success">Success</string>
    <string name="admin_leave_group">Before leave this group, you must choose new admin for it.</string>

    <!--Arrived dialog-->
    <string name="arrived_dialog_total_time">14 min</string>
    <string name="arrived_dialog_total_distance">7 km</string>

    <!--Invite Screen-->
    <string name="invite_text_ok">OK</string>
    <string name="invite_text_cancel">Cancel</string>
    <string name="item_user_invite">Invite</string>
    <string name="item_user_text_hint">Enter user name</string>

    <string name="text_search_edit_text_hint">Search for a look, style, or an item</string>
    <string name="text_search_cancel">Cancel</string>
    <string name="text_search_recent_header">Recent Searches</string>
    <string name="text_search_popular_header">Popular Searches</string>
    <string name="text_search_tag_item_post_count">%d posts</string>
</resources>
