<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackground1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_map"
            android:contentDescription="@string/splash_image_description" />

        <ImageView
            android:id="@+id/imgBackground2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_map"
            android:contentDescription="@string/splash_image_description" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_weight="0.4"
            android:contentDescription="@string/splash_description_app"
            android:src="@drawable/ic_location_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/splash_name_application"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/splash_description_app"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnEnableLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/common_bg_button_enable_location"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/splash_button_enable_location"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>
